# ellipsoid_tree

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  wheels.yml
bindings/: CMakeLists.txt  ellipsoid_tree_bindings.cpp  etree_bindings.cpp
bindings/tests/: test_ellipsoid_tree_py.py  test_etree_py.py
cmake/: ellipsoid_treeConfig.cmake.in  etreeConfig.cmake.in
docs/: Doxyfile  README.md  generate_examples.py  mainpage.md
docs/examples/: batch_picking.md  cg1_field.md  ellipsoid_tree_queries.md  intersections_gallery.md  kdtree_knn.md  mesh_mesh.md  mesh_queries.md  point_cloud.md
examples/: CMakeLists.txt  batch_picking.cpp  cg1_field.cpp  ellipsoid_tree_queries.cpp  intersections_gallery.cpp  kdtree_knn.cpp  mesh_mesh.cpp  mesh_queries.cpp  point_cloud.cpp  python_batch_picking.ipynb
include/ellipsoid_tree/: aabb_tree.hpp  batch_picker.hpp  ellipsoid_tree.hpp  geometric_sort.hpp  geometry.hpp  intersections.hpp  kd_tree.hpp  object_tree.hpp  plot2d.hpp  simplex_mesh.hpp
include/ellipsoid_tree/detail/: linear_feasibility.hpp  minimize_scalar.hpp  parallel_for.hpp  raster2d.hpp
include/etree/: aabb_tree.hpp  batch_picker.hpp  etree.hpp  geometric_sort.hpp  geometry.hpp  intersections.hpp  kd_tree.hpp  object_tree.hpp  plot2d.hpp  simplex_mesh.hpp
include/etree/detail/: linear_feasibility.hpp  minimize_scalar.hpp  parallel_for.hpp  raster2d.hpp
tests/: CMakeLists.txt  test_aabb_tree.cpp  test_batch_picker.cpp  test_geometry.cpp  test_helpers.hpp  test_intersections_closed_form.cpp  test_intersections_ellipsoid.cpp  test_intersections_simplex.cpp  test_kd_tree.cpp  test_lp_cells.cpp  test_main.cpp  test_minimize_scalar.cpp  test_object_trees.cpp  test_parallel_for.cpp  test_plot2d.cpp  test_plot2d_png.cpp  test_simplex_mesh.cpp
