# SPDX-License-Identifier: MIT
[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
# Distribution (PyPI) name — matches the repo. The import name stays `etree`.
name = "ellipsoid-tree"
version = "0.1.0"
description = "Exact ellipsoid intersection tests and spatial trees (header-only C++ core with Python bindings)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nick Alger" }]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/NickAlger/ellipsoid_tree"
Documentation = "https://nickalger.github.io/ellipsoid_tree/"
Repository = "https://github.com/NickAlger/ellipsoid_tree"

[tool.scikit-build]
cmake.version = ">=3.16"

[tool.scikit-build.cmake.define]
ETREE_BUILD_PYTHON = "ON"
ETREE_BUILD_TESTS = "OFF"
ETREE_BUILD_EXAMPLES = "OFF"

[tool.cibuildwheel]
# CPython 3.9-3.13. Skip musllinux (Alpine), 32-bit, and PyPy for v0.1.
# Coverage: Linux x86_64, Windows AMD64, and a macOS universal2 wheel (Intel +
# Apple Silicon). No Linux aarch64 — ARM/HPC users consume the header-only C++
# core from source, not wheels.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *_i686 *-win32"
build-frontend = "build"
# Verify every wheel imports and passes the binding tests before we ship it.
test-requires = "pytest numpy"
test-command = "pytest {project}/bindings/tests"

[tool.cibuildwheel.macos]
# One universal2 wheel (Intel + Apple Silicon), built on the arm64 runner since
# GitHub's Intel (macos-13) runners are retired.
archs = "universal2"
